Updated readme and fixed some spelling errors.

--- a/openwrt-backup.conf.sample
+++ b/openwrt-backup.conf.sample
@@ -1,3 +1,6 @@
+#!/usr/bin/env ash
+# shellcheck shell=dash disable=SC2034
+#
 # OpenWrt Backup
 #
 # Creates a compressed archive of selected folders from the overlay partition,
@@ -9,7 +12,7 @@
 # Settings
 # --------------------------------------------------
 
-# List of directories to backup (space seprarated, without leading '/')
+# List of directories to backup (space separated, without leading '/')
 _BACKUP_DIRS='etc root'
 
 # Backup archive filename
